🌈 style: modift file name

--- a/02.progress-steps/index.html
+++ b/02.progress-steps/index.html
@@ -20,5 +20,5 @@
     <button class="btn" id="next">Next</button>
   </div>
 </body>
-<script src="./style.js"></script>
+<script src="./script.js"></script>
 </html>
