--- a/04.hidden-search/index.html
+++ b/04.hidden-search/index.html
@@ -14,5 +14,5 @@
     <button class="btn"><i class="fas fa-search"></i></button>
   </div>
 </body>
-<script src="./style.js"></script>
+<script src="./script.js"></script>
 </html>
