--- a/05.blurry-loading/index.html
+++ b/05.blurry-loading/index.html
@@ -11,5 +11,5 @@
   <section class="bg"></section>
   <div class="loading-text">0%</div>
 </body>
-<script src="./style.js"></script>
+<script src="./script.js"></script>
 </html>
