--- a/06.scroll-animation/index.html
+++ b/06.scroll-animation/index.html
@@ -23,5 +23,5 @@
   <div class="box"><h2>Content</h2></div>
   <div class="box"><h2>Content</h2></div>
 </body>
-<script src="./style.js"></script>
+<script src="./script.js"></script>
 </html>
