--- a/09.sound-board/index.html
+++ b/09.sound-board/index.html
@@ -16,5 +16,5 @@
   <audio id="wrong" src="./sounds/wrong.mp3"></audio>
   <div id="buttons"></div>
 </body>
-<script src="./style.js"></script>
+<script src="./script.js"></script>
 </html>
