--- a/10.dad-jokes/index.html
+++ b/10.dad-jokes/index.html
@@ -14,5 +14,5 @@
     <button id="jokeBtn" class="btn">Get One more word</button>
   </div>
 </body>
-<script src="./style.js"></script>
+<script src="./script.js"></script>
 </html>
